revamped generated html structure, introduced buttons, all styles in css, fixed space proble in action column on ie/opera

--- a/share/css/icinga.css
+++ b/share/css/icinga.css
@@ -1,75 +1,95 @@
 /***** GENERAL *****/
-
 body {
 	color: #000000;
 	font-family: Verdana Geneva Arial Helvetica sans-serif;
+    font-size: 12pt;
 }
-
-img {
-	border: 0;
-    float: left;
-    display: block;
+#header {
+    text-align: middle;
+    font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+    font-size: 9pt;
+}
+#footer {
+    text-align: right;
+    color: grey;
+    font-size: 8pt;
+    font-style: italic;
 }
     
 /***** TABLES *****/
-
 table {
 	background-color: #fff; 
-	padding: 2px; 
+	padding: 2px;
+    margin: 0;
 	border: 0;
 }
-
 tr {
 	background-color: #E7E7E7;
+    margin: 0;
+    padding: 0;
 }
-
 th {
 	font-size: 10pt; 
 	background-color: #707677; 
 	color: #fff; 
 	border: 0;
 	padding: 2px 5px 2px 5px;
+    margin: 0;
 }
-
 td {
 	border: 0 none;
     font-size: 8pt;
 	padding: 2px 5px 2px 5px;
+    margin: 0;
+}
+#toplink {
+    text-align: right;
+    margin-right:4px;
+    margin-top:4px;
+}
+#toplink a {
+    font:8px/70% Arial, Helvetica, sans-serif; 
+    text-transform: uppercase; 
+    text-decoration: none; 
+    color: #bbb;
 }
 
 /* Information table */ 
-
-.infotable tr {
+#info table {
+	width: 100%;
+}
+#info tr {
 	background-color: #D2D2D2;
 }
 
 /* Interface table */
+#interface table {
+	width: 100%;
+}
+#interface img {
+	border: 0;
+    float: left;
+    display: block;
+    padding:0;
+	margin:0;
+    vertical-align:bottom;
+}
 
+/* Cell styles */
 .cellInitialRun {
     color: #808000;
 }
-
 .cellTrackedOk {
 	background-color: #00CC33; 
 	color: #fff;
 }
- 
 .cellTrackedChange {
 	background-color: #FF3300; 
 	color: #fff;
 }
-
 .cellNotTracked {
     background-color: #CCCCCC;
 }
-
 .cellExcluded {
     background-image: url(../img/overlay.png);
 }
-
-/***** SPANS *****/
-
-span {
-	font-size: 8pt;
-}
-
